# eve-rag

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/: README.md  chunker.py  config.yaml  custom_splitter.py  eo_conversations.jsonl  get_rds_data.py  post_upload.py  process_chunks.py  process_data.py  qa_evaluation_dataset.json  recursive_chunker.py  sample_collection.snapshot  ulpoad_chunks_qdrant.py  ulpoad_data_qdrant.py  upload_chunks_qdrant.py
models/: README.md
notebooks/: .env.example  01_chunking_strategies.ipynb  02_ingest.ipynb  03_RAG.ipynb  04_evaluation.ipynb  05_query_rewriting.ipynb  06_reranking.ipynb  Qwen.ipynb  README.md  copy_collection.ipynb  eve_naive_rag (pre-retrieval testing).ipynb  process.ipynb  process_chunks.ipynb  qwen collection quantization .ipynb  recursive_chunking.ipynb  upload.ipynb  upload_chunks_in_collection.ipynb
scripts/: README.md  create_file_path_index.py  evaluate_rag.py  generate_qa_dataset.py  process_chunks.py  requirements.txt  update_qdrant_payload.py
scripts/configs/: evaluate_config_sample.yaml  qa_generation_template.yaml  update_config.yaml
src/: config.yaml  embedding.py  guardrail.py  load_dataset.py  main.py  retriever.py  utils.py
tests/: QA_dataset_generation  .ipynb  QA_retrieval_test.ipynb  README.md  load_dataset.py  multi_chunk_test.ipynb  rearanking_test.ipynb  single_chunk_test.ipynb
