[project]
name = "eve-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "qdrant-client>=1.16.1",
    "sentence-transformers>=5.1.2",
]
